Refactoring server for improved extensibility.